tests/fixtures/invalid/pow_set_bytes_set.py
# Cannot call pow() with Set[int], Bytes, Set[int]
x = pow({1, 2, 3}, b"hello", {1, 2, 3})
